Changes for Perl extension SDL-Tutorial-3DWorld

0.21 Tue 21 Dec 2010
	- Adding model collection support, which is needed for linking model
	  files to their supporting texture (etc) files.

0.20 Mon 20 Dec 2010
	- Apparently OpenGL convention dictates that all polygons have their
	  points declared counter-clockwise to the "front" of the polygon.
	  Once turning on face culling to save GL work, it turns out that
	  all my shapes would inside out. Oops :)
	- Importing a local fork of OpenGL::RWX
	- Adding a life-sized nutcracker doll to help test RWX support.
	- Expanded OpenGL::RWX's per-face surface normals to face-averaged
	  per-vertex surface normals, allowing OpenGL to currectly smooth the
	  polygons (important on polished wood toys)
	- Added preliminary support for OBJ models (only with per-face surface
	  normals at this point).
	- Added a superbly details and giant freaking table to demonstrate the
	  greater quality of objects you tend to be able to find for obj files.

0.19 Mon 20 Dec 2010
	- Added a "God Mode" flying camera which uses the left shift key
	  as an exponential speed accelerator, and make it the default.
	- Added ->current static method to ::3DWorld to get currently
	  world. Removes the need to pass things like the camera around
	  everywhere all the time.
	- The skybox now locates the camera via ->current->camera instead
	  having to be passed the camera.
	- Added a console for overlaying the world with diagnostic text.
	- Set min_t to zero to push frames per second as high as possible.
	- Correcting some broken versions

0.18 Sun 19 Dec 2010
	- Moving the landscape to a typical 2000-era infinite ground plane,
	  but with a more detailed texture than in that era.
	  Unfortunately, the new ground plane means our skybox looks wrong
	  now, as it was never designed for use with a ground plane.
	- Reorganised some internals so we don't need to export from OpenGL
	  so much. This will be removed later, once OpenGL fixes it constants.