@@ -3,12 +3,13 @@
 use strict;
 BEGIN {
 	$|  = 1;
+	$^W = 1;
 }
 
-use Test::More tests => 5;
+use Test::More tests => 7;
 use Test::NoWarnings;
-use File::Spec                  ();
-use SDL::Tutorial::3DWorld::OBJ ();
+use File::Spec                         ();
+use SDL::Tutorial::3DWorld::Asset::OBJ ();
 
 # Location of the test file
 my $file = File::Spec->catfile('share', 'model', 'table', 'table.obj');
@@ -16,13 +17,19 @@ ok( -f $file, "Found test file '$file'" );
 
 SCOPE: {
 	# Create the ::OBJ object
-	my $obj = new_ok( 'SDL::Tutorial::3DWorld::OBJ', [
+	my $obj = new_ok( 'SDL::Tutorial::3DWorld::Asset::OBJ', [
 		file => $file,
 	], 'Created OBJ object' );
 
-	# Initialise the RWX object
-	ok(         $obj->init, '->init ok' );
+	# Initialise the OBJ object
+	ok( $obj->init, '->init ok' );
 	ok( defined $obj->list, '->list ok' );
+	isa_ok( $obj->asset, 'SDL::Tutorial::3DWorld::Asset' );
+	like(
+		$obj->asset->directory,
+		qr/\btable$/,
+		'->asset refers to the correct directory',
+	);
 }
 
 # SCOPE: {
